--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- ====== UNICON ICONSCOUT ====== -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css"> 
      
-    <title>Shakti Dubey</title>
+    <title>Kunal Drall</title>
   </head>
   <body>
     <div id="root"></div>
